46: End to end working example
