# src/api/docs/swagger.json
@@ -12,6 +12,45 @@
     "host": "prospector.ie",
     "basePath": "/api",
     "paths": {
+        "/create": {
+            "post": {
+                "security": [
+                    {
+                        "None": []
+                    }
+                ],
+                "description": "Create and submit a job to nomad to deploy",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "job"
+                ],
+                "summary": "Create a job",
+                "parameters": [
+                    {
+                        "description": "Job",
+                        "name": "job",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Job"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Message"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "security": [
@@ -70,6 +109,34 @@
         }
     },
     "definitions": {
+        "controllers.Job": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "port": {
+                    "type": "object",
+                    "properties": {
+                        "container": {
+                            "type": "string"
+                        },
+                        "label": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "controllers.Message": {
             "type": "object",
             "properties": {
